--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "helmet": "^6.1.5",
     "mogoose": "^0.0.1-security",
+    "mongoose": "^7.1.0",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0"
   },
