--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "echo \"build not needed\""
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
-    "mogoose": "^0.0.1-security",
     "mongoose": "^7.1.0",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0"
